syntax = "proto3";

message QueryViewRequest {
    string view_id = 1;
    bool is_trash = 2;
}
